// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render an error message when api call to fetch image fails 1`] = `
<body>
  <div>
    <div
      data-testid="image-error"
      height="20px"
      width="20px"
    >
      Error: 
      Random error
    </div>
  </div>
</body>
`;

exports[`Image should render image when api call to fetch image succeeds 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse image css-58ftfq-MuiSkeleton-root"
      data-testid="image-spinner"
      style="width: 20px; height: 20px;"
    />
  </div>
</body>
`;

exports[`Image should render image when api call to fetch image succeeds 2`] = `
<body>
  <div>
    <img
      alt="dog.png"
      class="image"
      data-testid="image-content"
      height="20px"
      loading="lazy"
      src="blob://data"
      width="20px"
    />
  </div>
</body>
`;
